--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,100 @@
 annotated-types==0.7.0
 anyio==4.9.0
 atproto==0.0.61
+attrs==25.3.0
+beautifulsoup4==4.13.4
+bokeh==3.7.3
+Bottleneck==1.4.2
+Cartopy==0.24.1
+cattrs==24.1.3
 certifi==2025.4.26
 cffi==1.17.1
+cfgrib==0.9.15.0
+cftime==1.6.4.post1
 charset-normalizer==3.4.2
 click==8.2.0
+cloudpickle==3.1.1
+contourpy==1.3.2
+crc32c==2.7.1
 cryptography==44.0.3
+cycler==0.12.1
+dask==2025.4.1
+distributed==2025.4.1
 dnspython==2.7.0
+donfig==0.8.1.post1
+eccodes==1.2.0
+findlibs==0.1.1
+flox==0.10.3
+fonttools==4.58.0
+fsspec==2025.3.2
 h11==0.16.0
+h5netcdf==1.6.1
+h5py==3.13.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
 libipld==3.0.1
+llvmlite==0.44.0
+locket==1.0.0
+lxml==5.4.0
+lz4==4.4.4
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+msgpack==1.1.0
+narwhals==1.39.0
+nc-time-axis==1.4.1
+netCDF4==1.7.2
+numba==0.61.2
+numbagg==0.9.0
+numcodecs==0.16.0
+numpy==2.2.5
+numpy-groupies==0.11.2
+opt_einsum==3.4.0
+packaging==25.0
+pandas==2.2.3
+partd==1.4.2
+pillow==11.2.1
+platformdirs==4.3.8
+pooch==1.8.2
+protobuf==6.30.2
+psutil==7.0.0
+pyarrow==20.0.0
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
+pydap==3.5.5
+pyparsing==3.2.3
+pyproj==3.7.1
+pyshp==2.3.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
 requests==2.32.3
+requests-cache==1.2.1
+scipy==1.15.3
+seaborn==0.13.2
+shapely==2.1.0
+siphon==0.10.0
+six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+sparse==0.16.0
+tblib==3.1.0
+toolz==1.0.0
+tornado==6.4.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
+url-normalize==2.2.1
 urllib3==2.4.0
+WebOb==1.8.9
 websockets==13.1
+xarray==2025.4.0
+xyzservices==2025.4.0
+zarr==3.0.7
+zict==3.0.0
+zipp==3.21.0
